Fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,11 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
 
-    --primary: 255 60% 74%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 260 47% 77%;
+    --primary-foreground: 0 0% 100%;
 
     --secondary: 260 31% 54%;
-    --secondary-foreground: 210 40% 98%;
+    --secondary-foreground: 0 0% 100%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
